issue with input position on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -248,4 +248,8 @@ img {
         grid-template-columns: 1fr;
         gap: 20px;
     }
+
+    .last {
+        grid-row: auto;
+    }
 }
